[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "overwatch_hero_stats"
version = "0.1.0"
description = "A tool leveraging the overwatch hero stats api"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["src"]